--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,24 @@
-# bundle
+# 依赖
 node_modules/
-dist/
-bundle/
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# assets
-*.mp3
-*.mp4
-*.ogv
-*.webm
+pnpm-debug.log*
+
 # Editor directories and files
-*.idea
-.vscode/
-# other
-_笔记/
-# vue(2.6.10)
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+cankaoziliao/
+dist/
+
