--- a/前端开发/开发环境/前端工程化/脚手架/cli/utils/package.json
+++ b/前端开发/开发环境/前端工程化/脚手架/cli/utils/package.json
@@ -2,9 +2,7 @@
 	"name": "@cli/utils",
 	"version": "1.0.0",
 	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
+	"scripts": {},
 	"author": "seven",
 	"license": "ISC"
 }
