--- a/前端开发/开发环境/前端工程化/脚手架/cli/core/package.json
+++ b/前端开发/开发环境/前端工程化/脚手架/cli/core/package.json
@@ -1,9 +1,7 @@
 {
 	"name": "@cli/core",
 	"version": "1.0.0",
-	"bin": {
-		"cli": "bin/index.js"
-	},
+	"bin": "bin/index.js",
 	"dependencies": {
 		"@cli/utils": "workspace:*"
 	}
