--- a/前端开发/开发环境/前端工程化/脚手架/cli/core/package.json
+++ b/前端开发/开发环境/前端工程化/脚手架/cli/core/package.json
@@ -3,6 +3,8 @@
 	"version": "1.0.0",
 	"bin": "bin/index.js",
 	"dependencies": {
-		"@cli/utils": "workspace:*"
+		"@cli/utils": "workspace:*",
+		"@cli/commands": "workspace:*",
+		"@cli/models": "workspace:*"
 	}
 }
