--- a/前端开发/开发环境/前端工程化/脚手架/cli/package.json
+++ b/前端开发/开发环境/前端工程化/脚手架/cli/package.json
@@ -11,10 +11,13 @@
 	"dependencies": {
 		"axios": "1.4.0",
 		"colors": "1.4.0",
+		"commander": "11.1.0",
 		"dotenv": "16.0.3",
 		"import-local": "3.2.0",
 		"minimist": "1.2.8",
+		"npminstall": "3.0.1",
 		"npmlog": "7.0.1",
+		"pkg-dir": "5.0.0",
 		"root-check": "2.0.0",
 		"semver": "7.5.4",
 		"url-join": "4.0.1"
